编写基础框架、任务结构

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,7 +128,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+EditorStartupMap=/Game/N_Level/Test_1.Test_1
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -136,10 +136,10 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+GameInstanceClass=/Script/NEVs.N_GameInstance
+GameDefaultMap=/Game/N_Level/Test_1.Test_1
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
+GlobalDefaultGameMode=/Game/N_Blueprints/BP_N_GameMode.BP_N_GameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
