完成认知模块的交互功能

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -136,7 +136,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/NEVs.N_GameInstance
+GameInstanceClass=/Game/N_Blueprints/BP_N_GameInstance.BP_N_GameInstance_C
 GameDefaultMap=/Game/N_Level/Test_1.Test_1
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/N_Blueprints/BP_N_GameMode.BP_N_GameMode_C
